--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     
       
 </head>
-<body class="max-w-7xl	mx-auto pb-[200px]">
+<body class="max-w-7xl	mx-auto pb-[200pxg]">
     <header class="bg-yellow-100">
         <nav class="">
             <div class="navbar bg-base-100">
